--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
+<!-- Tells the browser what type of page it is (HTML5) -->
 <!DOCTYPE html>
+<!-- Sets the language to English -->
 <html lang = "en">
 <head>
-    <meta charset = "UTF - 8" >
+    <!-- "UTF-8" makes sure that the letters and numbers appear correctly -->
+    <meta charset = "UTF-8" >
+    <!-- Text that is displayed in the browser tab -->
     <title> My First Ever Webpage :D </title>
 </head>
 <body>
+    <!-- Name in a big text -->
     <h1> Megan Saleh </h1>
+    <!-- Course, Major, and Message in normal text -->
     <p> COP 4813 </p>
     <p> Computer Science </p>
     <p> Hey Look, It Runs! </p>
