--- a/calculus.html
+++ b/calculus.html
@@ -181,7 +181,7 @@
             <!-- Image section -->
             <div class="media-container">
                 <!-- My calculus image from the images folder -->
-                <img src="images/calculus.png" alt="Calculus">
+                <img src="calculus.png" alt="Calculus">
             </div>
 
             <!-- Button that takes you back to the homepage -->
@@ -189,4 +189,5 @@
         </div>
     </div>
 </body>
+
 </html>
