--- a/astronomy.html
+++ b/astronomy.html
@@ -182,7 +182,7 @@
             <!-- Image section -->
             <div class="media-container">
                 <!-- My Astronomy image from the images folder -->
-                <img src="images/astronomy.png" alt="Astronomy">
+                <img src="astronomy.png" alt="Astronomy">
             </div>
 
             <!-- Button that takes you back to the homepage -->
@@ -190,4 +190,5 @@
         </div>
     </div>
 </body>
+
 </html>
