--- a/algebra.html
+++ b/algebra.html
@@ -182,7 +182,7 @@
             <!-- Image section -->
             <div class="media-container">
                 <!-- My algebra image from the images folder -->
-                <img src="images/algebra.png" alt="Algebra">
+                <img src="algebra.png" alt="Algebra">
             </div>
 
             <!-- Button that takes you back to the homepage -->
@@ -190,4 +190,5 @@
         </div>
     </div>
 </body>
+
 </html>
