--- a/chemistry.html
+++ b/chemistry.html
@@ -182,7 +182,7 @@
             <!-- Image section -->
             <div class="media-container">
                 <!-- My chemistry image from the images folder -->
-                <img src="images/chemistry.png" alt="Chemistry">
+                <img src="chemistry.png" alt="Chemistry">
             </div>
 
             <!-- Button that takes you back to the homepage -->
@@ -190,4 +190,5 @@
         </div>
     </div>
 </body>
+
 </html>
