--- a/geometry.html
+++ b/geometry.html
@@ -180,7 +180,7 @@
             <!-- Image section -->
             <div class="media-container">
                 <!-- My geometry image from the images folder -->
-                <img src="images/geometry.png" alt="Geometry">
+                <img src="geometry.png" alt="Geometry">
             </div>
 
             <!-- Button that takes you back to the homepage -->
@@ -188,4 +188,5 @@
         </div>
     </div>
 </body>
+
 </html>
