--- a/mesopotamia.html
+++ b/mesopotamia.html
@@ -191,7 +191,7 @@
             <div class="media-container">
                 <!-- My Mesopotamia
                   image from the images folder -->
-                <img src="images/mesopotamia.png" alt="Mesopotamia">
+                <img src="mesopotamia.png" alt="Mesopotamia">
             </div>
 
             <!-- Button that takes you back to the homepage -->
@@ -199,4 +199,5 @@
         </div>
     </div>
 </body>
+
 </html>
