--- a/physics.html
+++ b/physics.html
@@ -182,7 +182,7 @@
             <!-- Image section -->
             <div class="media-container">
                 <!-- My Physics image from the images folder -->
-                <img src="images/physics.png" alt="Physics">
+                <img src="physics.png" alt="Physics">
             </div>
 
             <!-- Button that takes you back to the homepage -->
@@ -190,4 +190,5 @@
         </div>
     </div>
 </body>
+
 </html>
