--- a/revolution.html
+++ b/revolution.html
@@ -194,7 +194,7 @@
             <!-- Image section -->
             <div class="media-container">
                 <!-- My Industrial Revolution image from the images folder -->
-                <img src="images/revolution.png" alt="Industrial Revolution
+                <img src="revolution.png" alt="Industrial Revolution
                 ">
             </div>
 
@@ -203,4 +203,5 @@
         </div>
     </div>
 </body>
+
 </html>
