--- a/trigonometry.html
+++ b/trigonometry.html
@@ -181,7 +181,7 @@
             <!-- Image section -->
             <div class="media-container">
                 <!-- My trigonometry image from the images folder -->
-                <img src="images/trig.png" alt="Trigonometry">
+                <img src="trig.png" alt="Trigonometry">
             </div>
 
             <!-- Button that takes you back to the homepage -->
@@ -189,4 +189,5 @@
         </div>
     </div>
 </body>
+
 </html>
