--- a/western.html
+++ b/western.html
@@ -192,7 +192,7 @@
             <div class="media-container">
                 <!-- My Western Civilization
                   image from the images folder -->
-                <img src="images/western.png" alt="Western Civilization">
+                <img src="western.png" alt="Western Civilization">
             </div>
 
             <!-- Button that takes you back to the homepage -->
@@ -200,4 +200,5 @@
         </div>
     </div>
 </body>
+
 </html>
