--- a/worldwars.html
+++ b/worldwars.html
@@ -189,7 +189,7 @@
             <!-- Image section -->
             <div class="media-container">
                 <!-- My World Wars image from the images folder -->
-                <img src="images/worldwar.png" alt="World Wars">
+                <img src="worldwar.png" alt="World Wars">
             </div>
 
             <!-- Button that takes you back to the homepage -->
@@ -197,4 +197,5 @@
         </div>
     </div>
 </body>
+
 </html>
